// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProjectProgressChart > snapshot > should match snapshot when rendered with animation class 1`] = `
<div
  class="fade-in"
>
  <div>
    <h2>
      Project Progress
    </h2>
    <p>
      Completion percentage by project
    </p>
  </div>
  <div>
    <div
      data-testid="chart-container"
    />
  </div>
</div>
`;

exports[`ProjectProgressChart > snapshot > should match snapshot when rendered with empty data 1`] = `
<div
  class=""
>
  <div>
    <h2>
      Project Progress
    </h2>
    <p>
      Completion percentage by project
    </p>
  </div>
  <div>
    <div
      data-testid="chart-container"
    />
  </div>
</div>
`;

exports[`ProjectProgressChart > snapshot > should match snapshot when rendered with typical data 1`] = `
<div
  class=""
>
  <div>
    <h2>
      Project Progress
    </h2>
    <p>
      Completion percentage by project
    </p>
  </div>
  <div>
    <div
      data-testid="chart-container"
    />
  </div>
</div>
`;
